# fastapi_3D

./: pyproject.toml
fastapi_3D/: app.py
tests/: test_app.py
